lintian-brush (0.68) UNRELEASED; urgency=medium

  * missing-build-dependency-for-dh_-command: Support checking Build-
    Depends-Indep and Build-Depends-Arch.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 22:56:01 +0000

lintian-brush (0.67) unstable; urgency=medium

  * Fix regression when adding a new stanza to an existing changelog
    entry with a single author and more than one bullet point.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 22:32:10 +0000

lintian-brush (0.66) unstable; urgency=medium

  * Directly edit debian/changelog rather than calling out to dch:
   + Allows adding more details in changelog entries.
   + In apply-multiarch-hints, actually list what changes were made.
   + Possibly addresses #960853.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 18:28:35 +0000

lintian-brush (0.65) unstable; urgency=medium

  * Explicitly set vendor when running tests; fixes tests running on
    Ubuntu. Closes: #960832
  * Don't just strip whitespace from license paragraphs in copyright-
    refers-to-symlink-license.
  * Improve detection of packages that use gbp-dch by also scanning
    their history for behaviour around gbp dch.
  * Update standards version to 4.5.0, no changes needed.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 24 May 2020 01:26:26 +0000

lintian-brush (0.64) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Only check GitHub repository for moved repository info if it is set.

  [ Sandro Knauß ]
  * Add fixer for license-file-listed-in-debian-copyright.

  [ Jelmer Vernooĳ ]
  * Read dh commands from the lintian files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 May 2020 14:33:36 +0000

lintian-brush (0.63) unstable; urgency=medium

  * Clean up unnecessary 'dh_missing --fail-missing' when upgrading to
    debhelper 13. Closes: #959823
  * Add document start when adding new YAML files. Closes: #958413
  * Check Debian bugs when correcting Close => Closes.